# capn-pack

./: .gitignore  Cargo.toml  README.md  code_cov_fuzz_report_generate.bash  fuzz.bash  fuzz_report_generate.bash  license.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: capnpack_full.rs  unpack_possibly_invalid.rs
src/: lib.rs  main.rs  tests.rs
