[package]
name = "capnpack"
version = "1.0.3"
edition = "2024"
authors = ["Alvin-He <zhongjihe.alvin@gmail.com>"]
categories = ["compression"]
keywords = ["encoding", "serialization", "packing", "capnpack", "capnproto"]
license = "MIT"
repository = "https://github.com/Alvin-He/capn-pack"
documentation = "https://docs.rs/capnpack"
description = "CapnProto's packing algorithm for any binary data"
readme = "README.md"
exclude = [
    "src/main.rs",
    "src/tests.rs",
    "*.bash"
]

[profile.release]
lto = "fat"
opt-level = 3

[lib]
name = "capnpack"
path = "src/lib.rs"
